intel/bench_214_work/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/log.txt
bench_214_work/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:70:13: error: expected expression
  GLfloat (*)[4] q;
            ^
bench_214_work/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:72:13: error: expected expression
  GLfloat (*)[4] p;
            ^
bench_214_work/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:73:26: error: use of undeclared identifier 'q'
  gl_xform_points_4fv(n, q, m, p);
                         ^
bench_214_work/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:73:32: error: use of undeclared identifier 'p'
  gl_xform_points_4fv(n, q, m, p);
                               ^
5 errors generated.
HLS FPGA Parse FAILED.
